# SDP-project

./: .gitignore  main.py  requirements.txt  vercel.json
backend/: .env.example  README.md  api.py  database.py  fee_strategy.py  grade_strategy.py  main.py  notice_observer.py  pyproject.toml  requirements.txt  seed_users.py  user_factory.py  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/forget/: page.tsx
frontend/app/(auth)/signin/: page.tsx
frontend/app/(auth)/signup/: page.tsx
frontend/app/staff/dashboard/: page.tsx
frontend/app/student/dashboard/: page.tsx
frontend/app/teacher/dashboard/: page.tsx
frontend/components/: Faq.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  PortalDashboard.tsx
frontend/lib/: api.ts  auth.ts
