[project]
name = "university-management-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "pymongo[srv]==4.10.1",
    "dnspython==2.8.0",
    "python-dotenv==1.0.1",
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "pydantic[email]==2.11.7",
]

[tool.vercel]
entrypoint = "api:app"
